Bug 176612 - Wrong message showed when selecting more then a message in the message list
Summary: Wrong message showed when selecting more then a message in the message list
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: 1.10.90
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2008-12-01 10:40 UTC by András Manţia
Modified: 2008-12-05 18:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description András Manţia 2008-12-01 10:40:58 UTC
If you go through the messages using shift+up/down arrows to select the messages you read, it will show the previously visible message, not the one that actually has the focus in the message list. Happens only with keyboard navigation, CTRL+click works as expected.
Comment 1 George Kiagiadakis 2008-12-02 13:23:21 UTC
I cannot reproduce this with rev 890719. Shift+up/down shows the message that was last added to the selection, like it does with ctrl+click.
Comment 2 András Manţia 2008-12-02 14:10:43 UTC
Same here, I don't know why I wrote up/down. It is about shift+left/right arrows.
Comment 3 George Kiagiadakis 2008-12-02 14:22:45 UTC
Confirmed as well.
Comment 4 Szymon Stefanek 2008-12-05 18:21:42 UTC
SVN commit 892992 by stefanek:

Activate the right message when moving with Shift+Left/Right.

BUG: 176612




 M  +3 -4      view.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=892992