Activate the right message when moving with Shift+Left/Right.

BUG: 176612



svn path=/trunk/KDE/kdepim/; revision=892992